crates/nash-solve/tests/snapshots/inference__tuple_arity_mismatch.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nvalue : (unit, unit, unit, unit)\nvalue = ((), (), (), (), ())\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `( unit, unit, unit, unit )`,
  │ found `( 'a4, 'a3, 'a2, 'a1, 'a )`.
   ╭─[Main.nash:3:9]
 1 │ module Main exposing (..)
 2 │ value : (unit, unit, unit, unit)
   ·         ────────────┬───────────
   ·                     ╰── declared type
 3 │ value = ((), (), (), (), ())
   ·         ──────────┬─────────
   ·                   ╰── body of `value`
   ╰────
