crates/nash-solve/tests/snapshots/inference__tuple_fourth_component_mismatch.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\nvalue : (unit, unit, unit, unit)\nvalue = ((), (), (), \\x -> x)\n"
---
[
    BadExpr(
        Region {
            start: Position {
                line: 3,
                column: 9,
            },
            end: Position {
                line: 3,
                column: 30,
            },
        },
        Tuple,
        Tuple(
            Unit,
            Unit,
            [
                Unit,
                Lambda(
                    FlexVar(
                        "a",
                    ),
                    FlexVar(
                        "a",
                    ),
                    [],
                ),
            ],
        ),
        FromAnnotation(
            "value",
            0,
            TypedBody,
            Tuple(
                Unit,
                Unit,
                [
                    Unit,
                    Unit,
                ],
            ),
        ),
    ),
]
