crates/nash-solve/tests/snapshots/inference__tuple_pattern_arg.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (swap)\n\nswap ( a, b ) = ( b, a )\n"
---
swap : forall (a : Any) (b : Any). ( a, b ) -> ( b, a )
