crates/nash-solve/tests/snapshots/inference__tuple_tail_occurs_check.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nloop x = x ((), (), (), x)\n"
info: diagnostic
---
nash::type::infinite_type

  × `x` has a self-referential type: ( 'a2, 'a1, 'a, ∞ ) -> 'b
   ╭─[Main.nash:2:6]
 1 │ module Main exposing (..)
 2 │ loop x = x ((), (), (), x)
   ·      ─
   ╰────
  help: Break the type cycle; ∞ marks a repeated part of the type.
