crates/nash-solve/tests/snapshots/inference__tuple_tail_survives_patterns_annotations_and_instantiation.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\n\nrotate (a, b, c, d, e) = (e, a, b, c, d)\nkeep : ('a, 'b, 'c, 'd, 'e) -> ('a, 'b, 'c, 'd, 'e)\nkeep value = value\nresult = (keep ((), (), (), 1, \"tail\"), rotate ((), (), (), \"four\", 5))\n"
---
keep : forall a b c d e. ( a, b, c, d, e ) -> ( a, b, c, d, e )
result : forall a a1 a2 a3 a4 a5 b c d e. (FromUnit a5, FromUnit b, FromUnit c, FromInt d, FromString e, FromUnit a3, FromUnit a2, FromUnit a1, FromString a, FromInt a4) => ( ( a5, b, c, d, e ), ( a4, a3, a2, a1, a ) )
rotate : forall a b c d e. ( a, b, c, d, e ) -> ( e, a, b, c, d )
