crates/nash-solve/tests/snapshots/inference__tuple_value.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (pair)\n\npair = ( 1, \"two\" )\n"
---
pair : forall a a1. (FromInt a1, FromString a) => ( a1, a )
