crates/nash-solve/tests/snapshots/inference__twin_constructor_does_not_follow_the_expected_type.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype status = Ready\ntype Status = Ready\nwrong : Status\nwrong = Ready\n"
---
[
    BadExpr(
        Region {
            start: Position {
                line: 5,
                column: 9,
            },
            end: Position {
                line: 5,
                column: 14,
            },
        },
        Foreign(
            "Ready",
        ),
        Type {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "status",
            args: [],
        },
        FromAnnotation(
            "wrong",
            Region {
                start: Position {
                    line: 4,
                    column: 9,
                },
                end: Position {
                    line: 4,
                    column: 15,
                },
            },
            0,
            TypedBody,
            Type {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "Status",
                args: [],
            },
        ),
    ),
]
