crates/nash-solve/tests/snapshots/inference__type_variable_names_do_not_imply_constraints-3.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nidentity : 'appendable -> 'appendable\nidentity x = x\nmain = identity ()\n"
---
identity : forall appendable. appendable -> appendable
main : unit
