crates/nash-solve/tests/snapshots/inference__type_variable_names_do_not_imply_constraints-4.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nidentity : 'compappend -> 'compappend\nidentity x = x\nmain = identity ()\n"
---
identity : forall compappend. compappend -> compappend
main : unit
